--- a/my-blazor-scheduler.csproj
+++ b/my-blazor-scheduler.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Syncfusion.EJ2.Blazor" Version="17.4.0.49" />
+    <PackageReference Include="Syncfusion.Blazor" Version="18.1.0.36-beta" />
   </ItemGroup>
 
 </Project>
